# odds-engine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
analytics/: analyze_bets.cpp  devig_reference.py
engine/: BetLog.hpp  BookTable.hpp  Consensus.hpp  Devig.hpp  Kelly.hpp  ReplayHash.hpp  SessionReader.hpp  TruthReader.hpp  main.cpp
proto/: messages.hpp
sim/: Bookmaker.hpp  JumpSink.hpp  LatentMarket.hpp  OutputSink.hpp  Seeding.hpp  SettlementSink.hpp  TruthSink.hpp  main.cpp
tests/: scratch_books.cpp  scratch_latent.cpp  scratch_roundtrip.cpp  test_book_table.cpp  test_bookmaker.cpp  test_consensus.cpp  test_devig.cpp  test_kelly.cpp  test_latent.cpp  test_replay_hash.cpp  test_seeding.cpp  test_wire_format.cpp
tools/: validate_devig.cpp  verify_session.cpp
